# gameoff-2019

./: .gitignore  Cargo.toml  README.md
assets/: entity_spritesheet.ron  entity_spritesheet.xcf
config/: display.ron  input.ron
src/: config.rs  main.rs
src/components/: leap.rs  mod.rs  player.rs  reticle.rs
src/states/: game.rs
src/systems/: aiming.rs  leaping.rs  mod.rs  start_leaping.rs
