[package]
name = "gameoff-2019-amethyst"
version = "0.1.0"
authors = ["Tom Smallridge <tom@smallridge.com.au>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
amethyst = "0.13.2"
objc = "=0.2.6"

[features]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
nightly = ["amethyst/nightly"]
default = ["vulkan"]
